<resources>
    <string name="app_name">Firebase Android Lab</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navdrawer_header_profile_name">Anonymous</string>
    <string name="navdrawer_header_profile_email">anonymous@android.com</string>
    <string name="nav_item_home">Home</string>
    <string name="nav_item_auth">Authentication</string>
    <string name="nav_item_database">Database</string>
    <string name="nav_item_settings">Settings</string>

    <string name="action_settings">Settings</string>
    <string name="action_logout">Log out</string>

    <!-- Hints -->
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>

    <!-- Buttons -->
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="signed_out">Signed Out</string>
    <string name="link_account">Link Account</string>
    <string name="sign_up">Sign up</string>
    <string name="post">Post</string>

    <!-- Messages -->
    <string name="msg_nav_suggest">See Firebase Demo, please choose navigation drawer menu.</string>
    <string name="msg_unavailable">Unavailable now!</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="loading">Loading…</string>
    <string name="sign_in_failed">Sign In Failed.</string>

    <!-- Firebase Auth -->
    <string name="desc_firebase_lockup">Firebase logo and name</string>

    <string name="label_google_sign_in">Firebase + Google Sign In</string>
    <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with Firebase.</string>

    <string name="label_facebook_login">Firebase + Facebook Login</string>
    <string name="desc_facebook_login">Use a Facebook Login credential to authenticate with Firebase.</string>

    <string name="label_twitter_login">Firebase + Twitter Login</string>
    <string name="desc_twitter_login">Use a Twitter Login credential to authenticate with Firebase.</string>

    <string name="label_email_password">Email/Password Authentication</string>
    <string name="desc_email_password">Use an email and password to authenticate with Firebase.</string>

    <string name="label_anonymous_auth">Anonymous Authentication</string>
    <string name="desc_anonymous_auth">Sign in anonymously and then later upgrade to a full Firebase Auth user.</string>

    <string name="label_custom_auth">Custom Authentication</string>
    <string name="desc_custom_auth">Use a custom token signed by your own server to authenticate with Firebase.</string>

    <string name="label_firebase_ui">FirebaseUI Auth</string>
    <string name="desc_firebase_ui">Use the FirebaseUI-Android library to authenticate with Firebase.</string>

    <string name="fmt_status_email_password">Email User: %s</string>
    <string name="text_title_email_password">Email and Password</string>

    <string name="fmt_status_firebase">Firebase User: %s</string>

    <string name="id_fmt">User ID: %s</string>
    <string name="email_fmt">Email: %s</string>

    <string name="anonymous_sign_in">Anonymous Sign In</string>
    <string name="account_linking">Account Linking</string>

    <!-- Firebase Database -->
    <string name="label_firebase_database">Database example</string>
    <string name="database_ref_message">message</string>
    <string name="label_new_post">New Post</string>
    <string name="label_post_detail">Post Detail</string>

    <string name="tab_title_recent">Recent</string>
    <string name="tab_title_my_posts">My Posts</string>
    <string name="tab_title_my_top_posts">My Top Posts</string>

    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean nec condimentum ante, quis mattis mi. Proin ut rhoncus libero, ac euismod neque. Ut suscipit, enim a facilisis consequat, orci lacus venenatis orci, at ultricies orci nulla sed ex. In condimentum viverra velit, eget feugiat libero imperdiet vel. Aenean pretium, lectus vitae bibendum bibendum, diam turpis convallis eros, quis tristique leo sapien at ipsum. Praesent eu odio id nulla lobortis auctor. Donec eget dolor eget nisl euismod commodo vel a lacus. Quisque ut justo vitae urna pharetra accumsan. Etiam dignissim neque iaculis mauris viverra, blandit rhoncus odio porttitor. Phasellus nibh arcu.</string>
    <string name="hint_title_new_post">Title</string>
    <string name="hint_write_new_post">Write your post...</string>
    <string name="hint_write_comment">Write a comment...</string>
</resources>
