<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/nav_group_main"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/nav_item_home"/>
        <item
            android:id="@+id/nav_auth"
            android:icon="@drawable/ic_menu_auth"
            android:title="@string/nav_item_auth"/>
        <item
            android:id="@+id/nav_database"
            android:icon="@drawable/ic_menu_database"
            android:title="@string/nav_item_database"/>
    </group>

    <group
        android:id="@+id/nav_group_other"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/nav_item_settings"/>
    </group>

</menu>
