<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_anonymous_auth"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="cc.naratipud.lab.firebase.AnonymousAuthActivity">

    <ImageView
        android:id="@+id/icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/desc_firebase_lockup"
        android:src="@drawable/firebase_lockup_400"/>

    <TextView
        android:id="@+id/title_anonymous"
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/icon"
        android:layout_marginBottom="8dp"
        android:text="@string/anonymous_sign_in"/>

    <TextView
        android:id="@+id/anonymous_status_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_anonymous"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/signed_out"/>

    <TextView
        android:id="@+id/anonymous_status_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/anonymous_status_id"
        android:layout_marginBottom="8dp"
        tools:text="Email: none"/>

    <Button
        android:id="@+id/button_anonymous_sign_in"
        android:layout_width="@dimen/field_width_standard"
        android:layout_height="wrap_content"
        android:layout_below="@id/anonymous_status_email"
        android:text="@string/sign_in"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        android:textColor="@color/app_body_text"
        style="@style/Widget.AppCompat.Button.Colored"/>

    <Button
        android:id="@+id/button_anonymous_sign_out"
        android:layout_width="@dimen/field_width_standard"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/button_anonymous_sign_in"
        android:layout_toRightOf="@id/button_anonymous_sign_in"
        android:layout_toEndOf="@id/button_anonymous_sign_in"
        android:enabled="false"
        android:text="@string/sign_out"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        style="@style/Widget.AppCompat.Button.Colored"/>

    <TextView
        android:id="@+id/title_linking"
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_anonymous_sign_in"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/account_linking"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/field_email_layout"
        android:layout_width="@dimen/field_width_standard"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_linking">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/field_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:maxLines="1"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="@dimen/field_width_standard"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/field_email_layout"
        android:layout_toRightOf="@id/field_email_layout"
        android:layout_toEndOf="@id/field_email_layout">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/field_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:maxLines="1"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/button_link_account"
        android:layout_width="@dimen/field_width_standard"
        android:layout_height="wrap_content"
        android:layout_below="@id/field_email_layout"
        android:enabled="false"
        android:text="@string/link_account"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        style="@style/Widget.AppCompat.Button.Colored"/>

</RelativeLayout>
